Remove flickering due to scrollbar ( Fix #196 )

--- a/client/styles.css
+++ b/client/styles.css
@@ -735,3 +735,15 @@ x-dialog x-paper {
         --bg-color-secondary: #f1f3f4;
     }
 }
+
+
+/* 
+    Edge specific styles
+*/
+@supports (-ms-ime-align: auto) {
+
+    html,
+    body {
+        overflow: hidden;
+    }
+}
